[package]
name = "axum-bson"
version = "0.1.0"
edition = "2021"
authors = ["SerP <serp256@gmail.com>"]
license = "MIT"
license_file="LICENCE"
description = "axum bson extractor and response"
repository = "https://github.com/serp256/axum_bson.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson="2.9"
axum-core = "*"
serde = "*"
http = "*"
async-trait = "*"
mime = "0.3"
bytes = "*"
http-body = "*"
thiserror = "*"
