[package]
name = "axum-bcs"
version = "0.1.0"
edition = "2024"
authors = ["NightFeather <leolee50910@gmail.com>"]
license = "MIT"
description = "Axum BCS extractor and response"
repository = "https://github.com/NightFeather0615/axum-bcs.git"
keywords = ["axum", "bcs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcs = "0.1.6"
axum-core = "0.5.2"
serde = "1.0.219"
http = "1.3.1"
mime = "0.3.17"
bytes = "1.10.1"
thiserror = "2.0.16"
